# Embeddings-and-Vector-DB

./: chatty_pdf.py  chatty_pdf_ingestion.py  chatty_pdf_retieval.py  ingestion-fc.py  ingestion.py  lcel_retrieval.py  main.py  mediumblog1.txt  mediumblog2.txt  pyproject.toml  retrieval.py  templates.py  ui.py
agents_25_use_cases/: index.faiss  index.pkl
